--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie lovers</title>
     <link rel="stylesheet" href="./style.css">
+    <script defer src="./index.js"></script>
 </head>
 <body>
     <header>
