create div for interacting with users to gain the data input. create a form element and an input area enable user to input the query

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
     </header>
     <main>
+        <div class="form-container">
+            <form id="user-query">
+                <label for="actor-name">Actor/Actress you wannt to know: <input type="text" id="actor-name"></label>
+            </form>
+        </div>
 
     </main>
     <footer>
