add submit type button for form element

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <main>
         <div class="form-container">
             <form id="user-query">
-                <label for="actor-name">Actor/Actress you wannt to know: <input type="text" id="actor-name"></label>
+                <label for="actor-name">Actor/Actress you wannt to know: <input type="text" id="actor-name" placeholder="his/her name is ..."></label>
+                <button type="submit">search</button>
             </form>
         </div>
         <hr>
