--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <main>
         <div class="form-container">
             <form id="user-query">
-                <label for="actor-name">Actor/Actress you wannt to know: <input type="text" id="actor-name" placeholder="his/her name is ..."></label>
+                <label for="actor-name">Actor/Actress: <input type="text" id="actor-name" placeholder="his/her name is ..."></label>
+                <button type="submit">search</button>
+                <hr>
+                <label for="film-name">The film you like: <input type="text" id="film-name" placeholder="The film's name is ..."></label>
                 <button type="submit">search</button>
             </form>
         </div>
