add json file to be watched by json server

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         </div>
         <hr>
         <div class="display-container">
-            <label for="display-area">The information we found: <ul id="data-list"></ul></label>
+            <label for="display-area">The information we found: 
+                <ul id="data-list"></ul>
+            </label>
         </div>
 
     </main>
