add a sub-title for input area

--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
     </header>
     <main>
         <div class="form-container">
+            <h4>input your query below to get the information you are interested in:  </h4>
             <form id="user-query">
                 <label for="actor-name">Actor/Actress: <input type="text" id="actor-name" placeholder="his/her name is ..."></label>
                 <button type="submit">search</button>
+                <button type=""submit>search randomly</button>
                 <hr>
                 <label for="film-name">The film you like: <input type="text" id="film-name" placeholder="The film's name is ..."></label>
                 <button type="submit">search</button>
+                <button type=""submit>search randomly</button>
+
             </form>
         </div>
         <hr>
