add eventlister to docuemnt to load the data from api whenever the DOM is created; and create the function 'init' to start the program accordingly whhen event occur

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </div>
         <hr>
         <div class="display-container">
-            <label for="display-area">The information we found: 
-                <ul id="data-list"></ul>
-            </label>
+            <h4>The most related information we found for your: </h4>
+            <ul id="display-list"></ul>
+            
         </div>
 
     </main>
