add a new option for planet in searching area

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                         <option value="films">2: search film</option>
                         <option value="starships">3: search starship</option>
                         <option value="vehicles">4: search vehicle</option>
+                        <option value="planets">5: search planet</option>
                     </select>
                     
                 </label><hr>
