complete the schema for all categories in db.json

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             </div>
         </div>
         <hr>
+        <h2> The results we found for you: </h2>
         <div class="display-container">
             <div id="cast-container">
                 <h4>cast: </h4>
