--- a/index.html
+++ b/index.html
@@ -36,28 +36,28 @@
             
             <div class="pool">
                 <h3>actor/actress:</h3>
-                <ul id="people-list"></ul>
+                <ol id="people-list"></ol>
                 <!-- <div id="people-list"></div> -->
                 
             </div>
             <div class="pool">
                 <h3>films:</h3>
-                <ul id="films-list"></ul>
+                <ol id="films-list"></ol>
                 <!-- <div id="films-list"></div> -->
             </div>
             <div class="pool">
                 <h3>starships:</h3>
-                <ul id="starships-list"></ul>
+                <ol id="starships-list"></ol>
                 <!-- <div id="starships-list"></div> -->
             </div>
             <div class="pool">
                 <h3>Vehicles:</h3>
-                <ul id="vehicles-list"></ul>
+                <ol id="vehicles-list"></ol>
                 <!-- <div id="vehicles-list"></div> -->
             </div>
             <div class="pool">
                 <h3>Planets:</h3>
-                <ul id="planets-list"></ul>
+                <ol id="planets-list"></ol>
                 <!-- <div id="planets-list"></div> -->
             </div>
         </div>
