--- a/index.html
+++ b/index.html
@@ -63,35 +63,45 @@
         </div>
         <hr>
         <div>
-            <form id="form-confirming" method="get">
+            <form id="person-form" method="get">
                 <label for="category-input"> 
                     <h3>insert the number of the person to see the details:</h3>
                 </label>
                 <input type="text" id="people" name="people" style="width: 15%;" placeholder="inser number here,please">
 
+                <input type="submit" style="text-align: center;" class="center" value="search">
+
+            </form>
+            <form action="" id="film-form">
                 <label for="category-input"> 
                     <h3>insert the number of the filmto see the details:</h3>
                 </label>
                 <input type="text" id="film" name="film" style="width: 15%;" placeholder="inser number here,please">
 
+                <input type="submit" style="text-align: center;" class="center" value="search">
+            </form>
+            <form action="" id="vehicle-form">
                 <label for="category-input"> 
                     <h3>insert the number of the vehicle to see the details:</h3>
                 </label>
                 <input type="text" id="vehicle" name="vehicle" style="width: 15%;" placeholder="inser number here,please">
-
+                <input type="submit" style="text-align: center;" class="center" value="search">
+            </form>
+            <form action="" id="starship-form">
                 <label for="category-input"> 
                     <h3>insert the number of the starship to see the details:</h3>
                 </label>
                 <input type="text" id="starship" name="starship" style="width: 15%;" placeholder="inser number here,please">
-
+                <input type="submit" style="text-align: center;" class="center" value="search">
+            </form>
+            <form action="" id="planet-form">
                 <label for="category-input"> 
                     <h3>insert the number of the planet to see the details:</h3>
                 </label>
                 <input type="text" id="planet" name="planet" style="width: 15%;" placeholder="inser number here,please">
 
 
-                <hr><input type="submit" style="text-align: center;" class="center" value="search">
-
+                <input type="submit" style="text-align: center;" class="center" value="search">
             </form>
             <h2> The results we found for you: </h2>
         </div>
