modify the delete function for the delete buttons

--- a/index.html
+++ b/index.html
@@ -128,9 +128,10 @@
                 <h4 class="center">starships</h4><br>
                 <ul id="starship-list"></ul>
                 
-            </div><div id="planets-container">
+            </div>
+            <div id="planets-container">
                 <h4 class="center">planets</h4><br>
-                <ul id="-planet-list"></ul>
+                <ul id="planet-list"></ul>
                 
             </div>
 
